Implement book api
